<resources>

    <string name="app_name">My Application</string>
    <string name="tvEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="forgotPass">Forgot password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="tvOR">OR</string>
    <string name="log_in_button_gg">Log in with Google</string>
    <string name="tvDHA">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="imageViewDescription">app icon</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>

</resources>