
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Signin">
    <!--    đổi tên file java khác-->

    <!--    <Spinner-->
    <!--        android:id="@+id/languageSwitcherButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="end"-->
    <!--        />-->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/imageViewDescription"
        android:src="@drawable/uit"
        android:layout_marginBottom="24dp"
        android:background="#f8fafc"/>

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"
        android:background="#f8fafc"
        android:drawableStart="@drawable/user_icon"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:hint="@string/tvEmail"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="#f8fafc"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password_icon"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="8dp"
        android:background="#f8fafc"/>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password_icon"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="8dp"
        android:background="#f8fafc"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="#003a8c"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            android:layout_marginStart="4dp"
            android:textColor="#003a8c"/>
    </LinearLayout>

</LinearLayout>
